--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>Car Rental Service</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Cars</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cars.html">Cars</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
@@ -37,7 +37,7 @@
             <h3>BMW 5 Series</h3>
             <p>Starting at $100/day</p>
         </div>
-        <!-- Add more featured cars as needed -->
+       
     </section>
 
     <footer>
