--- a/cars.html
+++ b/cars.html
@@ -29,19 +29,40 @@
             <button onclick="deleteCar()">Delete</button>
         </div>
 
+    <section class="crud">
+        <h2>Available cars</h2>
+        <div class="car">
+            <img src="car5.jpg" alt="Car 2">
+            <h3>BMW M3</h3>
+            <p>Price: 100 € /day</p>
+            <button onclick="editCar()">Edit</button>
+            <button onclick="deleteCar()">Delete</button>
+        </div>
+
+    <section class="crud">
+        <h2>Available cars</h2>
+        <div class="car">
+            <img src="car4.jpg" alt="Car 3">
+            <h3>Audi A4</h3>
+            <p>Price: 100 € /day</p>
+            <button onclick="editCar()">Edit</button>
+            <button onclick="deleteCar()">Delete</button>
+        </div>
+
     </section>
     <section class="crud">
         <div class="car">
-            <img src="car2.jpg" alt="Car 2">
+            <img src="car2.jpg" alt="Car 4">
             <h3>BMW 5 Series</h3>
             <p>Price: 100 € /day</p>
             <button onclick="editCar()">Edit</button>
             <button onclick="deleteCar()">Delete</button>
         </div>
+
         <section class="crud">
             <div class="car">
-                <img src="car3.jpg" alt="Car 3">
-                <h3>Toyota Camry</h3>
+                <img src="car3.jpg" alt="Car 5">
+                <h3>Volswagen Golf 8</h3>
                 <p>Price: 70 € /day</p>
                 <button onclick="editCar()">Edit</button>
                 <button onclick="deleteCar()">Delete</button>
